# contour

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
crates/btm/: Cargo.toml  build.rs
crates/btm/src/: config.rs  generate.rs  lib.rs  main.rs  scan.rs
crates/btm/src/cli/: diff.rs  generate.rs  info.rs  init.rs  merge.rs  mod.rs  scan.rs  validate.rs
crates/contour/: Cargo.toml
crates/contour-core/: Cargo.toml
crates/contour-core/skills/: contour.md
crates/contour-core/skills/contour/: SKILL.md
crates/contour-core/src/: app_discovery.rs  codesign.rs  completions.rs  config.rs  errors.rs  fleet_layout.rs  fragment.rs  help_agents.rs  lib.rs  logging.rs  output.rs  scan.rs  string_utils.rs  validation.rs  yaml_edit.rs
crates/contour-core/src/trainer/: mod.rs  queries.rs  runner.rs  step.rs
crates/contour-profiles/: Cargo.toml
crates/contour-profiles/src/: builder.rs  lib.rs  notifications.rs  service_management.rs  tcc.rs  uuid.rs
crates/contour/src/: dispatch.rs  init.rs  main.rs  osquery.rs
crates/mdm-schema/: Cargo.toml  build.rs
crates/mdm-schema/src/: capabilities.rs  lib.rs  profiles.rs  skip_keys.rs  types.rs
crates/mscp/: Cargo.toml  fleet-constraints.yml  jamf-constraints.yml
crates/mscp-schema/: Cargo.toml  build.rs
crates/mscp-schema/src/: baseline_edges.rs  baseline_meta.rs  control_tiers.rs  envelope_meta_keys.rs  envelope_patterns.rs  lib.rs  rule_meta.rs  rule_payloads.rs  rules_versioned.rs  sections.rs  types.rs
crates/mscp/src/: api.rs  lib.rs  main.rs  registry.rs
crates/mscp/src/cli/: baseline_mgmt.rs  config_generate.rs  constraints.rs  deduplicate.rs  diff.rs  extract_scripts.rs  generate.rs  glob_interactive.rs  info.rs  init.rs  mod.rs  odv.rs  process.rs  schema_cmd.rs  validate.rs
crates/mscp/src/config/: mod.rs  parser.rs  template.rs
crates/mscp/src/deduplicator/: mod.rs  multi_baseline_labels.rs  profile_deduplicator.rs  shared_library.rs
crates/mscp/src/extractors/: ddm.rs  embedded.rs  mobileconfig.rs  mod.rs  mscp_output.rs  rules.rs  version.rs
crates/mscp/src/filters/: fleet_conflicts.rs  jamf_conflicts.rs  mod.rs
crates/mscp/src/generators/: fleet_gitops.rs  mod.rs
crates/mscp/src/managers/: baseline.rs  category_resolver.rs  constraints.rs  mod.rs  odv.rs
crates/mscp/src/models/: baseline_reference.rs  ddm.rs  fleet.rs  mod.rs  mscp.rs  rule.rs
crates/mscp/src/output/: json.rs  mod.rs
crates/mscp/src/transformers/: ddm.rs  fleet_policy.rs  fleet_script.rs  jamf.rs  jamf_scoping.rs  labels.rs  mod.rs  munki_compliance.rs  munki_pkginfo.rs  munki_script.rs  profile.rs  rule_script.rs  script.rs  script_helpers.rs  team_yaml.rs
crates/mscp/src/updaters/: mod.rs  team.rs
crates/mscp/src/validators/: conflicts.rs  mod.rs  schema.rs
crates/mscp/src/versioning/: diff.rs  git_hash.rs  manifest.rs  mod.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: config.rs  generate.rs  main.rs  scan.rs
crates/notifications/src/cli/: configure.rs  diff.rs  generate.rs  init.rs  mod.rs  scan.rs  validate.rs
crates/osquery-schema/: Cargo.toml  build.rs
crates/osquery-schema/src/: lib.rs  osquery.rs  types.rs
crates/pppc/: Cargo.toml
crates/pppc/docs/: PPPC-SOP.md
crates/pppc/src/: codesign.rs  lib.rs  main.rs  pppc.rs
crates/pppc/src/cli/: batch.rs  configure.rs  diff.rs  generate.rs  info.rs  init.rs  mod.rs  scan.rs  validate.rs
crates/profile/: Cargo.toml
crates/profile/recipes/: entra-psso.toml  okta.toml  santa.toml
crates/profile/src/: lib.rs  main.rs
crates/profile/src/cli/: command.rs  ddm.rs  diff.rs  docs.rs  duplicate.rs  enrollment.rs  generate.rs  glob_utils.rs  import.rs  info.rs  init.rs  jamf_import.rs  link.rs  mod.rs  normalize.rs  payload.rs  post_generate.rs  scan.rs  search.rs  sign.rs  synthesize.rs  unsign.rs  uuid.rs  validate.rs
crates/profile/src/config/: mod.rs  renaming.rs
crates/profile/src/ddm/: mod.rs  parser.rs  schema.rs  types.rs
crates/profile/src/diff/: mod.rs  profile_diff.rs
crates/profile/src/docs/: generator.rs  mod.rs
crates/profile/src/link/: extractor.rs  linker.rs  mod.rs  types.rs  validator.rs
crates/profile/src/migrate/: mapping.rs  mod.rs
crates/profile/src/output/: json.rs  mod.rs
crates/profile/src/profile/: mod.rs  normalizer.rs  parser.rs  validator.rs
crates/profile/src/recipe/: loader.rs  mod.rs
crates/profile/src/schema/: jsonschema.rs  loader.rs  lookup.rs  mod.rs  parser.rs  plist_parser.rs  serializer.rs  types.rs  yaml_parser.rs
crates/profile/src/signing/: mod.rs
crates/profile/src/uuid/: mod.rs
crates/profile/src/validation/: mod.rs  schema_validator.rs
crates/profile/tests/: sop_traps.rs
crates/santa/: Cargo.toml
crates/santa/docs/: PIPELINE-SOP.md
crates/santa/src/: lib.rs  main.rs
crates/santa/src/bundle/: config.rs  layers.rs  mod.rs
crates/santa/src/cel/: codegen.rs  context.rs  dryrun.rs  mod.rs  validate.rs
crates/santa/src/cli/: add.rs  allow_cmd.rs  cel_cmd.rs  classify.rs  completions.rs  config.rs  diff.rs  discover.rs  faa_cmd.rs  fetch.rs  filter.rs  fleet.rs  generate.rs  init.rs  merge.rs  mod.rs  pipeline_cmd.rs  prep.rs  remove.rs  rings.rs  scan.rs  select.rs  snip.rs  stats.rs  validate.rs
crates/santa/src/config/: mod.rs  santa_config.rs
crates/santa/src/coverage/: mod.rs  report.rs
crates/santa/src/diff/: mod.rs
crates/santa/src/discovery/: mod.rs  patterns.rs
crates/santa/src/faa/: mod.rs  schema.rs
crates/santa/src/fleet/: mod.rs
crates/santa/src/generator/: mod.rs
crates/santa/src/merge/: mod.rs
crates/santa/src/models/: faa.rs  mod.rs  profile_category.rs  ring.rs  rule.rs
crates/santa/src/output/: mod.rs
crates/santa/src/parser/: csv_parser.rs  json_parser.rs  mod.rs  yaml_parser.rs
crates/santa/src/pipeline/: lock.rs  mod.rs
crates/santa/src/transform/: fleet_csv.rs  installomator.rs  mobileconfig.rs  mod.rs  osquery.rs  santactl.rs
crates/santa/src/validator/: mod.rs
crates/support/: Cargo.toml
crates/support/src/: config.rs  discovery.rs  generator.rs  lib.rs  main.rs
crates/support/src/cli/: init.rs  (+3 more)
(+19 files in other folders)
