[package]
name = "contour-core"
version = "0.1.7"
description = "Shared library for Contour CLI tools (profile, mscp, santa)"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
plist.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI (for completions)
clap.workspace = true
clap_complete.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Terminal
colored.workspace = true
inquire.workspace = true

# Regex
regex.workspace = true

# Date/time
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
