[package]
name = "mscp-schema"
version = "0.1.4"
description = "mSCP security baseline schema definitions"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
