[package]
name = "notifications"
version = "0.1.6"
description = "Notification settings profile toolkit for macOS"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "notifications"
path = "src/main.rs"

[dependencies]
contour-core.workspace = true
contour-profiles.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
plist.workspace = true

# Interactive prompts
inquire.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Terminal
colored.workspace = true

# Memory allocator
mimalloc.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[build-dependencies]
chrono.workspace = true

[lints]
workspace = true
