[package]
name = "osquery-schema"
version = "0.1.9"
description = "Osquery table and column schema definitions"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
