[package]
name = "pppc"
version = "0.1.6"
description = "PPPC/TCC mobileconfig profile toolkit for macOS privacy permissions"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pppc"
path = "src/main.rs"

[dependencies]
contour-core.workspace = true
contour-profiles.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
plist.workspace = true
csv.workspace = true

# Interactive prompts
inquire.workspace = true

# Error handling
anyhow.workspace = true

# Crypto
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Terminal
colored.workspace = true

# Regex
regex.workspace = true

# Memory allocator
mimalloc.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[build-dependencies]
chrono.workspace = true

[lints]
workspace = true
