[package]
name = "profile"
version = "0.1.5"
description = "Apple configuration profile toolkit for MDM deployments"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "profile"
path = "src/main.rs"

[dependencies]
contour-core.workspace = true
contour-profiles = { path = "../contour-profiles" }

# CLI
clap.workspace = true
clap_complete.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
toml.workspace = true
plist.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Crypto & encoding
sha2.workspace = true
base64.workspace = true
uuid.workspace = true
cms.workspace = true

# File system
walkdir.workspace = true
glob.workspace = true

# Parallelism
rayon.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Terminal
colored.workspace = true
inquire.workspace = true

# Date/time
chrono.workspace = true

# Regex
regex.workspace = true

# Diff
similar.workspace = true

# Directories
dirs.workspace = true

# Memory allocator
mimalloc.workspace = true

# MDM schema data
mdm-schema.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[build-dependencies]
chrono.workspace = true

[lints]
workspace = true
