[package]
name = "santa"
version = "0.1.8"
description = "Santa mobileconfig profile toolkit for macOS application control"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "santa"
path = "src/main.rs"

[dependencies]
contour-core.workspace = true
contour-profiles.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
toml.workspace = true
plist.workspace = true
csv.workspace = true

# CEL (for bundle classification)
cel-interpreter.workspace = true

# Interactive prompts
inquire.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Crypto
sha2.workspace = true
uuid.workspace = true

# File system
walkdir.workspace = true
glob.workspace = true

# Parallelism
rayon.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Terminal
colored.workspace = true

# Date/time
chrono.workspace = true

# Regex
regex.workspace = true

# Memory allocator
mimalloc.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[build-dependencies]
chrono.workspace = true

[lints]
workspace = true
