[package]
name = "support"
version = "0.1.7"
description = "Root3 Support App mobileconfig profile generator"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "support"
path = "src/main.rs"

[dependencies]
contour-core.workspace = true
contour-profiles.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
plist.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Terminal
colored.workspace = true
inquire.workspace = true

# Memory allocator
mimalloc.workspace = true

[build-dependencies]
chrono.workspace = true

[lints]
workspace = true
